@@ -15,5 +15,6 @@
     "DIRSFIRST": false,
     "SESAME": null,
     "VERIFY_HOSTNAME": null,
-    "ENV_PREFIX": "HC_"
+    "ENV_PREFIX": "HC_",
+    "NOTIFY_SERVICE": "persistent_notification.create"
 }
